<resources>
    <string name="app_name">Humain Health</string>
    <string name="db_name">HumainHealth-DB</string>
    <string name="noti_channel_default">General</string>
    <string name="font_light">"Assistant-Light.ttf"</string>
    <string name="font_regular">"Assistant-Regular.ttf"</string>
    <string name="font_medium">"Assistant-SemiBold.ttf"</string>
    <string name="font_semi_bold">"Assistant-SemiBold.ttf"</string>
    <string name="font_bold">"Assistant-Bold.ttf"</string>
    <string name="alert_text">Alert</string>
    <string name="alert_loading">Loading&#8230;</string>
    <string name="alert_wait">Wait&#8230;</string>
    <string name="alert_dialog_btn_yes">Yes</string>
    <string name="alert_dialog_btn_no">No</string>
    <string name="alert_dialog_msg_exit_flow">Are you sure you want to exit the flow?</string>
    <string name="alert_dialog_msg_remove_item">Are you sure you want to remove this item?</string>
    <string name="alert_dialog_msg_remove_only_item">Are you sure you want to empty your cart?</string>
    <string name="alert_dialog_msg_log_out">Are you sure you want to logout?</string>
    <string name="alert_dialog_msg_cart_location_change">Changing to a new location may clear all your cart items and order details, be sure before you proceed.</string>
    <string name="alert_dialog_title_email">Email Required</string>
    <string name="alert_dialog_msg_email_required">To complete payment, a valid email address is required.</string>
    <string name="alert_dialog_what_went_wrong">Let us know what went wrong</string>
    <string name="alert_dialog_something_specific">Something specific?</string>
    <string name="alert_download_in_progress">Download in progress...</string>
    <string name="alert_cancel_order">Are you sure you want to cancel this order?</string>
    <string name="alert_delete_address">Are you sure you want to delete this address?</string>
    <string name="alert_delete_family_member">Are you sure you want to delete this family member?</string>
    <string name="alert_remove_profile_image">Are you sure you want to remove your profile image?</string>
    <string name="error_general">Oops, Something went wrong!</string>
    <string name="error_internet">Check your internet connection!</string>
    <string name="error_name">Please enter name!</string>
    <string name="error_age">Please enter age!</string>
    <string name="error_dob">Please enter DOB!</string>
    <string name="error_email_empty">Please enter your email id!</string>
    <string name="error_email_invalid">Please enter correct email id!</string>
    <string name="error_select_gender">Please select gender!</string>
    <string name="error_self">Select self or someone else</string>
    <string name="error_sex">Select male or female</string>
    <string name="error_phone_invalid">Please enter a correct phone number!</string>
    <string name="error_phone_empty">Please enter your phone number!</string>
    <string name="error_otp">OTP can not be empty!</string>
    <string name="error_payment_failure">Payment failed, please try again!</string>
    <string name="error_name_save">Please enter name and save</string>
    <string name="error_cash_only">Only Cash on Arrival option available for now</string>
    <string name="error_location_unavailable">Please select a location where you want the tests to be done!</string>
    <string name="error_location_mismatch">This test is not available at your selected location!</string>
    <string name="error_insufficient_balance">You do not have sufficient balance!</string>
    <string name="error_sufficient_balance">You already have sufficient wallet balance to pay!</string>
    <string name="error_select_test_location">Please select a test location!</string>
    <string name="error_complete_address">Please provide your complete address!</string>
    <string name="error_play_services">Google Play Services are required to use notification and other important services of the app, please update!</string>
    <string name="error_search_result">No match found!</string>
    <string name="error_no_slots_available">No slots available.!</string>
    <string name="error_no_date_available">No date available.!</string>
    <string name="error_incomplete_new_address">Address not complete, please try again!</string>
    <string name="error_invalid_card">Please enter valid card number</string>
    <string name="error_invalid_expiry">Please enter valid expiry month and year</string>
    <string name="error_no_notification_detail">No detail found to show!</string>
    <string name="error_location_not_serviceable">This location is no more serviceable, please select another one.</string>
    <string name="error_wallet_COD">Cash on arrival cannot be clubbed with Humain wallet payments. Please choose another mode.</string>
    <string name="error_invalid_card_details">Please enter valid card details.!</string>
    <string name="error_invalid_bank_selection">Please select a bank!</string>
    <string name="rule_password">Password should be at least 8 character long with 1 uppercase, 1 lowercase, 1 special and 1 numeric character</string>
    <string name="rule_phone">Phone number should be 10 digit long without country code</string>
    <string name="login_field_wrong">Please enter correct email or phone number!</string>
    <string name="login_field_password">Please Enter a correct password</string>
    <string name="price_default_unit">\u20B9</string>
    <string name="enter_exact_location">Enter exact location</string>
    <string name="message_otp">You will receive an OTP on this number for validating your order</string>
    <string name="message_resend_otp_intro">Didn\'t receive the OTP?</string>
    <string name="message_resend_otp">Tap here to resend</string>
    <string name="msg_provide_details">Please provide below required details</string>
    <string name="msg_coming_soon">Coming Soon!</string>
    <string name="freshchat_msg_coming_soon">Fresh chat coming soon!</string>
    <string name="msg_order_cancelled">Your order has been cancelled!</string>
    <string name="verification_code_empty">Please enter verification Code</string>
    <string name="verification_code_invalid">Verification code is invalid</string>
    <string name="verification_code_success">Email Verified Successfully</string>
    <string name="book_appt">Book an appointment</string>
    <string name="test_location">Where do you want your test to be done?</string>
    <string name="test_loc_home">Book a home appointment</string>
    <string name="get_test_loc_home">Get your test done at home</string>
    <string name="test_loc_center">Visit our Customer Experience Center</string>
    <string name="additional_charge">*addition charges may apply for same day delivery</string>
    <string name="order_receive_cashback">Great! You will receive \u20B9 20 cashback when your order is completed</string>
    <string name="order_whatsapp_report">Send my report on whatsApp</string>
    <string name="order_tests_selected">Tests Selected</string>
    <string name="order_add_more_tests">Add More</string>
    <string name="order_edit">Edit</string>
    <string name="order_patient_info">Patient info</string>
    <string name="order_report_home_deliver">I want my reports home delivered</string>
    <string name="order_report_delivery_price">\u20B9 100</string>
    <string name="order_includes_extra_costs">Includes \u20B9 200 extra costs</string>
    <string name="order_home_appt_address">Home appointment \nKormangala, Bengaluru\nfsakdubveviubveroub</string>
    <string name="order_tests">2 Tests</string>
    <string name="order_special_instructions">Special Instructions</string>
    <string name="extra_cost">Extra Costs</string>
    <string name="order_complete_address">Complete Address</string>
    <string name="add_address">Add a new address</string>
    <string name="saved_address">SAVED ADDRESSES</string>
    <string name="non_serviceable">Non-Serviceable</string>
    <string name="slot_same_day">Same day</string>
    <string name="slot_same_day_date">31 July, 2018</string>
    <string name="slot_same_day_cost">+ \u20B9 100</string>
    <string name="select_slot">SELECT TIME SLOT</string>
    <string name="slot_time_of_day">Morning</string>
    <string name="slot_not_today">Tomorrow or later</string>
    <string name="slot_not_today_range">01 &#8211; 06 Aug, 2018</string>
    <string name="select_date">SELECT DATE</string>
    <string name="slot_not_today_day">Mon, Aug</string>
    <string name="free">FREE</string>
    <string name="health_package">Health Packages</string>
    <string name="tests">Tests</string>
    <string name="filter_sample_type">Filter by Sample Type</string>
    <string name="btn_get_otp">Get OTP</string>
    <string name="btn_verify_and_link">Verify &amp; Link</string>
    <string name="btn_verify_otp">Verify &amp; Continue</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_toolbar_back">Back</string>
    <string name="btn_toolbar_cancel">Cancel</string>
    <string name="btn_toolbar_done">Done</string>
    <string name="btn_order_proceed">PROCEED</string>
    <string name="btn_call_phlebo">Call Phlebo</string>
    <string name="tv_view_report">View Report</string>
    <string name="btn_okay">Okay</string>
    <string name="tv_reschedule">Reschedule</string>
    <string name="btn_cancel_booking">Cancel Booking</string>
    <string name="btn_reschedule">RESCHEDULE BOOKING</string>
    <string name="btn_login">Login</string>
    <string name="btn_open_camera">Take image from Camera</string>
    <string name="btn_open_gallery">Select image from Gallery</string>
    <string name="btn_remove_image">Remove image</string>
    <string name="hint_phone">Mobile Number</string>
    <string name="name">Name</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_optional">Email (Optional)</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_otp">0</string>
    <string name="find_test">Find Test/Package</string>
    <string name="self">For Self</string>
    <string name="for_someone_else">For someone else</string>
    <string name="enter_location">Enter Location</string>
    <string name="appointment_booked">Appointment Booked!</string>
    <string name="hint_special_instructions">Notes&#8230;</string>
    <string name="hint_number">Phone number</string>
    <string name="hint_password">Password</string>
    <string name="hint_card_number">Card No.</string>
    <string name="hint_expiry_date_format">MM/YY</string>
    <string name="hint_cvv">CVV</string>
    <string name="hint_card_name">Name on Card</string>
    <string name="hint_search_banks">Search banks...</string>
    <string name="tab_home">Home</string>
    <string name="tab_tests">Tests</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_help">Help</string>
    <string name="provide_personal_information">Provide personal information</string>
    <string name="title_select_test_location">Please Select your Center</string>
    <string name="title_select_test">Select Tests</string>
    <string name="title_enter_number">Give us your contact number</string>
    <string name="title_verify_otp">Enter the OTP that you’ve just received</string>
    <string name="title_select_slot">When do you want the test to be done?</string>
    <string name="title_review_order">Review your Order</string>
    <string name="title_choose_loc">Choose\nLocation</string>
    <string name="title_cart">Cart</string>
    <string name="title_payment_method">How would you like to pay?</string>
    <string name="title_notification">Notifications</string>
    <string name="title_saved_address">Saved Addresses</string>
    <string name="title_location_home">Home</string>
</resources>