<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorWhite">

    <com.example.maaedupro.views.customviews.CustomEditText
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_super_extra_large"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:digits="0123456789"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="phone|number"
        android:textColor="@android:color/transparent"
        android:textSize="@dimen/text_extra_large_heading"
        app:customFont="@string/font_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.maaedupro.views.customviews.CustomTextView
        android:id="@+id/tv_otp_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:gravity="center"
        android:hint="@string/hint_otp"
        android:maxLength="1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_extra_large_heading"
        app:customFont="@string/font_bold"
        app:layout_constraintBottom_toBottomOf="@id/et_otp"
        app:layout_constraintLeft_toLeftOf="@id/et_otp"
        app:layout_constraintRight_toLeftOf="@id/tv_otp_2"
        app:layout_constraintTop_toTopOf="@id/et_otp"
        tools:text="1" />

    <View
        android:id="@+id/v_otp_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:background="@color/colorGreyMediumDark"
        app:layout_constraintLeft_toLeftOf="@id/et_otp"
        app:layout_constraintRight_toLeftOf="@id/v_otp_2"
        app:layout_constraintTop_toBottomOf="@id/tv_otp_1" />

    <com.example.maaedupro.views.customviews.CustomTextView
        android:id="@+id/tv_otp_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:gravity="center"
        android:hint="@string/hint_otp"
        android:maxLength="1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_extra_large_heading"
        app:customFont="@string/font_bold"
        app:layout_constraintBottom_toBottomOf="@id/et_otp"
        app:layout_constraintLeft_toRightOf="@id/tv_otp_1"
        app:layout_constraintRight_toLeftOf="@id/tv_otp_3"
        app:layout_constraintTop_toTopOf="@id/et_otp"
        tools:text="2" />

    <View
        android:id="@+id/v_otp_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:background="@color/colorGreyMediumDark"
        app:layout_constraintLeft_toRightOf="@id/v_otp_1"
        app:layout_constraintRight_toLeftOf="@id/v_otp_3"
        app:layout_constraintTop_toBottomOf="@id/tv_otp_2" />

    <com.example.maaedupro.views.customviews.CustomTextView
        android:id="@+id/tv_otp_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:gravity="center"
        android:hint="@string/hint_otp"
        android:inputType="phone"
        android:maxLength="1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_extra_large_heading"
        app:customFont="@string/font_bold"
        app:layout_constraintBottom_toBottomOf="@id/et_otp"
        app:layout_constraintLeft_toRightOf="@id/tv_otp_2"
        app:layout_constraintRight_toLeftOf="@id/tv_otp_4"
        app:layout_constraintTop_toTopOf="@id/et_otp"
        tools:text="3" />

    <View
        android:id="@+id/v_otp_3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:background="@color/colorGreyMediumDark"
        app:layout_constraintLeft_toRightOf="@id/v_otp_2"
        app:layout_constraintRight_toLeftOf="@id/v_otp_4"
        app:layout_constraintTop_toBottomOf="@id/tv_otp_3" />

    <com.example.maaedupro.views.customviews.CustomTextView
        android:id="@+id/tv_otp_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_otp"
        android:inputType="phone"
        android:maxLength="1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_extra_large_heading"
        app:customFont="@string/font_bold"
        app:layout_constraintBottom_toBottomOf="@id/et_otp"
        app:layout_constraintLeft_toRightOf="@id/tv_otp_3"
        app:layout_constraintRight_toRightOf="@id/et_otp"
        app:layout_constraintTop_toTopOf="@id/et_otp"
        tools:text="4" />

    <View
        android:id="@+id/v_otp_4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorGreyMediumDark"
        app:layout_constraintLeft_toRightOf="@id/v_otp_3"
        app:layout_constraintRight_toRightOf="@id/et_otp"
        app:layout_constraintTop_toBottomOf="@id/tv_otp_4" />

    <com.example.maaedupro.views.customviews.CustomTextView
        android:id="@+id/tv_resend_otp_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/message_resend_otp_intro"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/text_medium"
        app:customFont="@string/font_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_otp" />

    <com.example.maaedupro.views.customviews.CustomTextView
        android:id="@+id/tv_resend_otp_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_sub_heading"
        app:customFont="@string/font_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_resend_otp_intro"
        tools:text="00" />

    <com.example.maaedupro.views.customviews.CustomTextView
        android:id="@+id/tv_resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/message_resend_otp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_medium"
        android:padding="@dimen/margin_regular"
        android:visibility="gone"
        app:customFont="@string/font_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_resend_otp_intro" />

    <include layout="@layout/layout_btn_continue" />

</android.support.constraint.ConstraintLayout>